--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.15.0",
+    "bundler": "^0.8.0",
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.1.14",
